--- a/css/style.css
+++ b/css/style.css
@@ -61,24 +61,24 @@ ul li p {
 
 main {
   min-height: 100%; }
-  main .contenedor {
+  main .form__contacto {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     padding: 2%; }
-    main .contenedor .form {
+    main .form__contacto .form {
       background: rgba(0, 0, 0, 0.4);
       margin: auto;
       padding: 10px, 20px;
       padding-bottom: 25px;
       border-radius: 15px; }
-      main .contenedor .form .form-header {
+      main .form__contacto .form .form-header {
         display: -webkit-box;
         display: -ms-flexbox;
         display: flex;
         -ms-flex-pack: distribute;
         justify-content: space-around; }
-        main .contenedor .form .form-header .titulo {
+        main .form__contacto .form .form-header .titulo {
           font-family: arial;
           color: #ffd214;
           margin-left: 10px;
@@ -91,7 +91,7 @@ main {
           -ms-flex-align: center;
           align-items: center;
           padding-top: 2rem; }
-      main .contenedor .form .form-label {
+      main .form__contacto .form .form__label {
         display: -webkit-box;
         display: -ms-flexbox;
         display: flex;
@@ -104,7 +104,10 @@ main {
         margin-left: 5%;
         color: white;
         padding: 0,5%; }
-      main .contenedor .form #nombre, main .contenedor .form #telefono, main .contenedor .form #mail, main .contenedor .form #consulta {
+      main .form__contacto .form #nombre,
+      main .form__contacto .form #telefono,
+      main .form__contacto .form #mail,
+      main .form__contacto .form #consulta {
         font-family: arial;
         color: black;
         width: 90%;
@@ -117,18 +120,26 @@ main {
         border: none;
         border-top: solid 4px #ffd214;
         outline: none; }
-  main .hTitulo {
+  main .main__titulo {
     color: black;
     background-color: #ffd214;
     text-justify: distribute;
     text-align: center;
     font-size: 18px;
     padding: 0.4rem; }
+  main .main__sub__titulo {
+    color: white;
+    background-color: rgba(0, 0, 0, 0.3);
+    text-justify: distribute;
+    text-align: center;
+    font-size: 18px;
+    padding: 0.4rem;
+    margin-top: -0.5rem; }
 
 footer {
   width: 100%;
   background-image: linear-gradient(to bottom, #c9c9c9, white); }
-  footer .footergrande {
+  footer .footer {
     width: 100%;
     margin: auto;
     display: -ms-grid;
@@ -139,7 +150,7 @@ footer {
     padding: 20px 0px;
     -ms-flex-wrap: wrap;
     flex-wrap: wrap; }
-    footer .footergrande .box figure {
+    footer .footer .footer__redes figure {
       width: 100%;
       height: 100%;
       display: -webkit-box;
@@ -151,18 +162,18 @@ footer {
       -webkit-box-align: center;
       -ms-flex-align: center;
       align-items: center; }
-      footer .footergrande .box figure img {
+      footer .footer .footer__redes figure img {
         width: 120px; }
-    footer .footergrande .box #titulo-footer {
+    footer .footer .footer__redes #footer__titulo {
       color: black;
       margin-bottom: 10px;
       font-size: 18px;
       font-family: Arial;
       font-weight: bolder; }
-      footer .footergrande .box #titulo-footer p {
+      footer .footer .footer__redes #footer__titulo p {
         color: #3f3f3f;
         margin-bottom: 10px; }
-    footer .footergrande .box .redes-sociales a {
+    footer .footer .footer__redes .redes__sociales a {
       display: inline-block;
       text-decoration: none;
       font-size: 20px;
@@ -177,21 +188,30 @@ footer {
       -o-transition: all 300ms ease;
       transition: all 300ms ease;
       border-radius: 20px; }
-      footer .footergrande .box .redes-sociales a:hover {
+      footer .footer .footer__redes .redes__sociales a:hover {
         color: #000000;
         background-color: #ffd214; }
-  footer .subfooter {
+  footer .footer__copyright {
     background-color: crimson;
     text-align: center;
     padding: 10px;
     color: white;
     font-size: 13px; }
 
-.contenedorGal {
+.galeria__contenedor {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
   padding-bottom: 0.5rem; }
+
+.scale, .container__servicios {
+  box-shadow: 3px 3px 6px 3px #999; }
+  .scale:hover, .container__servicios:hover {
+    transform: scale(1.2); }
+
+.container__servicios:hover {
+  transform: scale(1.2);
+  z-index: 999; }
 
 #enviar {
   display: flex;
@@ -225,13 +245,13 @@ footer {
         font-size: 12px; }
       .header .header__navigation .navigation__menu .menu__item {
         padding: 20px 0; }
-  footer .footergrande {
+  footer .footer {
     -ms-grid-columns: unset;
     grid-template-columns: unset; }
-    footer .footergrande .box {
+    footer .footer .footer__redes {
       padding-left: 20px;
       padding-right: 20px; }
-      footer .footergrande .box #titulo-footer {
+      footer .footer .footer__redes #footer__titulo {
         color: black;
         margin-bottom: 10px;
         font-size: 12px; } }
