--- a/scss/prueba.scss
+++ b/scss/prueba.scss
@@ -1,18 +1,18 @@
 @import 'variables.scss';
 
 
-*{
+* {
     margin: 0;
     padding: 0;
 }
 
-body{
+body {
     font-family: Arial;
     font-size: 14px;
     background-image: url(../imagenes/patt3.png);
 }
 
-.header{
+.header {
     background-color: black;
     position: sticky;
     width: 100%;
@@ -26,7 +26,7 @@ body{
         -ms-flex-pack: space-evenly;
         justify-content: space-evenly;
 
-        #navMenu{
+        #navMenu {
             padding-left: 0;
         }
 
@@ -52,7 +52,7 @@ body{
                 margin: 0.8vw;
                 text-align: center;
 
-                a{
+                a {
                     padding: 20px;
                     text-decoration: none;
                     -webkit-transition: all 0.4s linear;
@@ -60,7 +60,7 @@ body{
                     transition: all 0.4s linear;
                     color: rgb(255, 255, 255);
             
-                    &:hover{
+                    &:hover {
                         background-color: $primary-color;
                         color: rgb(0, 0, 0);
                     }
@@ -70,7 +70,7 @@ body{
     }
 }
 
-ul li p{
+ul li p {
     -webkit-text-size-adjust: 5%;
     -moz-text-size-adjust: 5%;
         -ms-text-size-adjust: 5%;
@@ -83,27 +83,27 @@ ul li p{
 main {
     min-height: 100%;
 
-    .contenedor{
+    .form__contacto {
         display:-webkit-box;
         display:-ms-flexbox;
         display:flex;
         padding: 2%;
 
-        .form{
+        .form {
             background: rgba(0,0,0,.4);
             margin: auto;
             padding: 10px, 20px;
             padding-bottom: 25px;
             border-radius: 15px;
             
-            .form-header{
+            .form-header {
                 display:-webkit-box;
                 display:-ms-flexbox;
                 display:flex;
                 -ms-flex-pack: distribute;
                 justify-content: space-around;
 
-                .titulo{
+                .titulo {
                     font-family: arial;
                     color: $primary-color;
                     margin-left: 10px;
@@ -119,7 +119,7 @@ main {
                 }
             }
 
-            .form-label{
+            .form__label {
                 display: -webkit-box;
                 display: -ms-flexbox;
                 display: flex;
@@ -134,7 +134,10 @@ main {
                 padding: 0,5%;        
             }
 
-            #nombre,#telefono,#mail,#consulta{
+            #nombre,
+            #telefono,
+            #mail,
+            #consulta {
                 font-family: arial;
                 color: rgb(0, 0, 0);
                 width: 90%;
@@ -151,21 +154,31 @@ main {
         }
     }
 
-    .hTitulo{
-        color: rgb(0, 0, 0);
-        background-color: $primary-color;
-        text-justify: distribute;
-        text-align: center;
-        font-size: 18px;
-        padding: 0.4rem
+    @mixin titulosH($colorFondo, $colorFuente, $justiTexto, $aliTexto, $tamTexto, $pad) {
+        color: $colorFuente;
+        background-color: $colorFondo;
+        text-justify: $justiTexto;
+        text-align: $aliTexto;
+        font-size: $tamTexto;
+        padding: $pad;
     }
+
+    .main__titulo {
+        @include titulosH(#ffd214, black, distribute, center, 18px, 00.4rem );
+    }
+
+    .main__sub__titulo {
+        @include titulosH(rgba(0,0,0,.3),white, distribute, center, 18px, 00.4rem );
+        margin-top: -0.5rem;
+    }
+
 }
 
-footer{
+footer {
     width: 100%;
     background-image: $footer-gradient;
 
-    .footergrande{
+    .footer{
         width: 100%;
         margin: auto;
         display: -ms-grid;
@@ -177,7 +190,7 @@ footer{
         -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     
-        .box{ 
+        .footer__redes{ 
             figure{
                 width: 100%;
                 height: 100%;
@@ -196,7 +209,7 @@ footer{
                 }
             }
 
-            #titulo-footer{
+            #footer__titulo{
                 color: black;
                 margin-bottom: 10px;
                 font-size: 18px;
@@ -209,7 +222,7 @@ footer{
                 }   
             }
             
-            .redes-sociales{ 
+            .redes__sociales{ 
                 a{
                     display: inline-block;
                     text-decoration: none;
@@ -235,7 +248,7 @@ footer{
         }     
     }
     
-    .subfooter{
+    .footer__copyright{
         background-color: crimson;
         text-align: center;
         padding: 10px;
@@ -244,14 +257,31 @@ footer{
     }
 }
 
-.contenedorGal{
+.galeria__contenedor {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
     padding-bottom: 0.5rem;
 }
 
-#enviar{
+.scale {
+    box-shadow: 3px 3px 6px 3px #999;
+
+    &:hover {
+        transform: scale(1.2);
+    }
+}
+
+.container__servicios {
+    @extend .scale;
+    
+    &:hover {
+        transform: scale(1.2);
+        z-index: 999;
+    }   
+}
+
+#enviar {
     display: flex;
     justify-content: center;
     margin: auto;
@@ -300,16 +330,16 @@ footer{
         }        
     }
     
-    footer{
-        .footergrande {
+    footer {
+        .footer {
             -ms-grid-columns: unset;
             grid-template-columns: unset;
             
-            .box{
+            .footer__redes {
                 padding-left: 20px;
                 padding-right: 20px;
 
-                #titulo-footer{
+                #footer__titulo {
                     color: black;
                     margin-bottom: 10px;
                     font-size: 12px;
